# paperly

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  test_api.py
backend/prompts/: chat_with_paper.txt  extract_title.txt  generate_quizzes.txt  generate_summary_for_block.txt  translate_block.txt
backend/src/: config.py  database.py  fastapi.py  logging.py  models.py  openai.py
backend/src/models/: analysis.py  block.py  paper.py  translation.py
backend/src/routers/: analyses.py  chat.py  papers.py  summaries.py  translations.py  utils.py
backend/src/storage/: s3.py
backend/src/utils/: blocks.py  images.py  markdown.py  object_id.py  pdf_processor.py  translation.py
backend/src/worker/: base.py  extract_markdown.py  generate_quizzes.py  into_blocks.py  metadata_generator.py
data/mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-15005159539562339885.wt  collection-0-1903683307114630778.wt  collection-2-15005159539562339885.wt  collection-2-1903683307114630778.wt  collection-4-15005159539562339885.wt  collection-4-1903683307114630778.wt  collection-7-1903683307114630778.wt  index-1-15005159539562339885.wt  index-1-1903683307114630778.wt  index-3-15005159539562339885.wt  index-3-1903683307114630778.wt  index-5-15005159539562339885.wt  index-5-1903683307114630778.wt  index-6-1903683307114630778.wt  index-8-1903683307114630778.wt  index-9-1903683307114630778.wt  sizeStorer.wt
website/: next.config.ts  openapi.json  package.json  pnpm-lock.yaml  script.sh
(+77 files in other folders)
